--- a/rover-joystick/index.html
+++ b/rover-joystick/index.html
@@ -55,6 +55,14 @@
               <span class="control-value" id="angular-velocity-display">0.00 rad/s</span>
             </div>
           </div>
+          <div class="control-item">
+            <img src="../ASSETS/CompassIcon.svg" alt="Camera Tilt" class="control-icon">
+            <div class="control-details">
+              <span class="control-label">Camera Tilt Angle</span>
+              <span class="control-description">Right Joystick Y</span>
+              <span class="control-value" id="tilt-angle-display">110.0°</span>
+            </div>
+          </div>
         </div>
       </div>
 
